# shaggy

./: .gitignore  AGENTS.md  README.md  controller.py  daemon.py  main.py  package-lock.json  pyproject.toml  ui_mainwindow.py
conf/: collect.yaml  config.yaml
conf/acoustic_src/: test_src.yaml
conf/covariance/: default.yaml
conf/global/: default.yaml
conf/mic_array/: two_mics.yaml
conf/stft/: default.yaml
exec/: config_viewer.py  gstream_qt.py  plot_matplotlib.py  untitled.ui  video_stream.py
src/shaggy/: helpers.py
src/shaggy/apps/: camera.py  camera_edge.py  camera_ui.py  controller.py
src/shaggy/blocks/: block.py  block_hub.py  channel_levels.py  gstreamer_src.py  heartbeat.py  noise_floor.py  short_time_fft.py
src/shaggy/proto/: channel_levels.proto  channel_levels_pb2.py  codec.py  command.proto  command_pb2.py  detections.proto  detections_pb2.py  samples.proto  samples_pb2.py  stft.proto  stft_pb2.py
src/shaggy/signal/: covariance.py  noise_floor.py  short_time_fft.py  whiten.py  windows.py
src/shaggy/subs/: acoustic_src.py  block.py  channel_levels.py  heartbeat_src.py  noise_floor.py  short_time_fft.py  stft_buffer.py
src/shaggy/transport/: command_handler.py  edge_bridge.py  heartbeat.py  host_bridge.py  library.py  q_proxy.py  thread_id_generator.py
src/shaggy/widgets/: camera_display.py  camera_status_bar.py  channel_levels.py  heartbeat.py  heartbeat_status.py  power_spectral_density.py  spectra.py  spectrogram.py
src/shaggy/workers/: channel_level_worker.py  channel_levels.py  (+11 more)
tools/: build_protos.py
utils/: detector_stream.py
(+257 files in other folders)
